--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "normalize.css": "^8.0.1",
     "rateyo": "^3.0.0-alpha.2",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "swiper": "^6.1.1"
   }
 }
